// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Every OCP instruction page should render:  AWS-ipi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_aws/installing-aws-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_aws/installing-aws-account.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  AWS-upi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_aws/installing-aws-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_aws/installing-aws-user-infra.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  Azure-ipi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_azure/installing-azure-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_azure/installing-azure-default.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  Azure-upi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="preRelease"
              pendoID="/"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_azure/installing-azure-customizations.html"
                docURL="https://github.com/openshift/installer/blob/master/docs/user/azure/install_upi.md"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  Bare Metal 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              rhcosLearnMoreURL="https://docs.openshift.com/container-platform/latest/installing/installing_bare_metal/installing-bare-metal.html#creating-machines-bare-metal"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_bare_metal/installing-bare-metal-network-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_bare_metal/installing-bare-metal.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  GCP-ipi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_gcp/installing-gcp-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_gcp/installing-gcp-account.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  GCP-upi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              rhcosLearnMoreURL="https://docs.openshift.com/container-platform/latest/installing/installing_gcp/installing-gcp-user-infra.html#installation-gcp-user-infra-rhcos_installing-gcp-user-infra"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_gcp/installing-gcp-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_gcp/installing-gcp-user-infra.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  IBM-Z 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="ibmz"
              pendoID="/"
              rhcosLearnMoreURL="https://docs.openshift.com/container-platform/4.3/installing/installing_ibm_z/installing-ibm-z.html#installation-user-infra-machines-iso-ibm-z_installing-ibm-z"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations=""
                docURL="https://docs.openshift.com/container-platform/4.3/installing/installing_ibm_z/installing-ibm-z.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  Power 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="ppc64le"
              pendoID="/"
              rhcosLearnMoreURL="https://docs.openshift.com/container-platform/4.4/installing/installing_ibm_power/installing-ibm-power.html#creating-machines-bare-metal-power"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations=""
                docURL="https://docs.openshift.com/container-platform/4.4/installing/installing_ibm_power/installing-ibm-power.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  Red Hat OpenStack Platform-ipi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_openstack/installing-openstack-installer-custom.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_openstack/installing-openstack-installer-custom.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  Red Hat OpenStack Platform-upi 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              rhcosLearnMoreURL="https://docs.openshift.com/container-platform/latest/installing/installing_openstack/installing-openstack-user.html#installation-osp-creating-image_installing-openstack-user"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_openstack/installing-openstack-installer-custom.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_openstack/installing-openstack-user.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  Red Hat Virutalization 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_rhv/installing-rhv-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_rhv/installing-rhv-customizations.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;

exports[`Every OCP instruction page should render:  VMWare vSphere 1`] = `
<Fragment>
  <Card
    className="ocp-downloads"
  >
    <Stack>
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              1
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <DownloadsAndPullSecretSection
              channel="stable"
              pendoID="/"
              rhcosLearnMoreURL="https://docs.openshift.com/container-platform/latest/installing/installing_vsphere/installing-vsphere.html#installation-vsphere-machines_installing-vsphere"
              token={Object {}}
            />
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              2
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <div
              className="instructions-section"
            >
              <Title
                headingLevel="h2"
              >
                Follow the instructions to configure your environment and install your cluster
              </Title>
              <GetStarted
                customizations="https://docs.openshift.com/container-platform/latest/installing/installing_vsphere/installing-vsphere-installer-provisioned-customizations.html"
                docURL="https://docs.openshift.com/container-platform/latest/installing/installing_vsphere/installing-vsphere.html"
                pendoID="/"
              />
            </div>
          </SplitItem>
        </Split>
      </StackItem>
      <Divider
        className="steps-divider"
      />
      <StackItem>
        <Split>
          <SplitItem>
            <Title
              className="step-number"
              headingLevel="h1"
            >
              3
            </Title>
          </SplitItem>
          <SplitItem
            className="download-instructions"
            isFilled={true}
          >
            <SubscriptionAndSupport />
          </SplitItem>
        </Split>
      </StackItem>
    </Stack>
  </Card>
</Fragment>
`;
